--- a/app/Resources/views/todo/index.html.twig
+++ b/app/Resources/views/todo/index.html.twig
@@ -1,31 +1,28 @@
 {% extends 'base.html.twig' %}
 	
 	{% block body %}
-
+	<h2 class='page-header'>Tasks to finish!</h2>
 	<table class="table table-striped">
 	    <thead>
 	      <tr>
-	        <th>Firstname</th>
-	        <th>Lastname</th>
-	        <th>Email</th>
+	      	<th>#</th>
+	        <th>Task name</th>
+	        <th>Due To</th>
 	      </tr>
 	    </thead>
 	    <tbody>
+	    {% for todo in todos %}
 	      <tr>
-	        <td>John</td>
-	        <td>Doe</td>
-	        <td>john@example.com</td>
+	      	<td>{{todo.id}}</td>
+	        <td>{{todo.name}}</td>
+	        <td>{{todo.dueDate | date('F j, Y, g:i a')}}</td>
+	        <td>
+	        	<a href='/todo/details/{{todo.id}}' class='btn btn-success'>Details</a>
+	        	<a href='/todo/edit/{{todo.id}}' class='btn btn-default'>Edit</a>
+	        	<a href='/todo/delete/{{todo.id}}' class='btn btn-danger'>Delete</a>
+			</td>
 	      </tr>
-	      <tr>
-	        <td>Mary</td>
-	        <td>Moe</td>
-	        <td>mary@example.com</td>
-	      </tr>
-	      <tr>
-	        <td>July</td>
-	        <td>Dooley</td>
-	        <td>july@example.com</td>
-	      </tr>
+	    {% endfor %}
 	    </tbody>
   	</table>
 </div>
