--- a/app/Resources/views/todo/create.html.twig
+++ b/app/Resources/views/todo/create.html.twig
@@ -2,6 +2,10 @@
 	
 	{% block body %}
 
-		create
+		<h2 class="page-header">Add Task</h2>
 
+		{{ form_start(form) }}
+		{{ form_widget(form) }}
+		{{ form_end(form) }}
+	
 	{% endblock %}
