--- a/app/Resources/views/todo/details.html.twig
+++ b/app/Resources/views/todo/details.html.twig
@@ -2,6 +2,20 @@
 	
 	{% block body %}
 
-		details
+		<a class="btn btn-primary" href="/todos">Go back</a>
+		
+		<hr>
+
+		<h2 class='page-header'>{{todo.name}}</h2>
+
+		<ul class='list-group'>
+
+			<li class="list-group-item">Category: {{todo.category}}</li>
+			<li class="list-group-item">Priority: {{todo.priority}}</li>
+			<li class="list-group-item"><strong>Priority: {{todo.dueDate | date('F j, Y, g:i a')}}</strong></li>
+			<li class="list-group-item">{{todo.description}}</li>
+		</ul>
+
+
 
 	{% endblock %}
