--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,7 +47,11 @@
         <div class="row">
 
             <div class="col-md-12">
+                {% for flash_message in app.session.flashbag.get('notice')%}
 
+                 <div class='alert alert-success'>{{flash_message}}</div>
+
+                {%endfor%}
                 {% block body %}{% endblock %}
 
             </div>
